Crash when rendering with Workbench engine #60737

Closed
opened 2019-01-22 08:49:06 +01:00 by No One · 8 comments

Blender 2.80 (sub 41): 7f40d553f9
Quadro M2000/PCIe/SSE2
4.5.0 NVIDIA 391.8

Default scene, set render engine to "Workbench" and render --> Blender will crash.

Still worked in 84c06e996a

Blender 2.80 (sub 41): 7f40d553f903 Quadro M2000/PCIe/SSE2 4.5.0 NVIDIA 391.8 Default scene, set render engine to "Workbench" and render --> Blender will crash. Still worked in 84c06e996a7a
Author

Added subscriber: @noone

Added subscriber: @noone

#60763 was marked as duplicate of this issue

#60763 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Will do some git bisecting.

Will do some git bisecting.
Campbell Barton was assigned by Jacques Lucke 2019-01-22 11:20:19 +01:00
Member

This has been broken in 7467049055.

I guess the solution is to disable the clipping feature during rendering? Or clipping be applied to the render?

This has been broken in 7467049055. I guess the solution is to disable the clipping feature during rendering? Or clipping be applied to the render?

This issue was referenced by 185c2487a6

This issue was referenced by 185c2487a68125a309f3c4265419cefe163d4bdb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @rs2128

Added subscriber: @rs2128
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60737
No description provided.