Fix T60737: Crash workbench rendering

Addition of clipping from 7467049055a7
didn't account for non viewport display.