source/blender/draw/engines/workbench/workbench_data.c
@@ -88,7 +88,8 @@ void workbench_private_data_init(WORKBENCH_PrivateData *wpd)
 	wd->curvature_ridge = 0.5f / max_ff(SQUARE(wpd->shading.curvature_ridge_factor), 1e-4f);
 	wd->curvature_valley = 0.7f / max_ff(SQUARE(wpd->shading.curvature_valley_factor), 1e-4f);
 
-	{
+	/* Will be NULL when rendering. */
+	if (draw_ctx->rv3d != NULL) {
 		RegionView3D *rv3d = draw_ctx->rv3d;
 		if (rv3d->rflag & RV3D_CLIPPING) {
 			wpd->world_clip_planes = rv3d->clip;
